fix: .toList() → .collect(Collectors.toList()) Java 16 이하 호환